# FreeBIRD_IL_P

./: README.md  code_space_startup.sh  code_space_startup_anacredit_case1_scenario.sh
birds_nest/: Dockerfile  docker-compose.yaml  pyproject.toml  sql_inserts.sql
birds_nest/pybirdai/: admin.py  bird_data_model.py  bird_meta_data_model.py  report_views.py  urls.py  views.py
birds_nest/pybirdai/annotations/: decorators.py
birds_nest/pybirdai/context/: context.py  sdd_context_django.py
birds_nest/pybirdai/entry_points/: execute_datapoint.py
birds_nest/pybirdai/templates/: base.html
birds_nest/pybirdai/templatetags/: pybirdai_extras.py
birds_nest/pybirdai/utils/: generator_for_tests.py  run_tests.py
birds_nest/resources/technical_export/: axis.csv  axis_ordinate.csv  combination_mapping.csv  cube.csv  cube_group.csv  cube_group_enumeration.csv  cube_hierarchy.csv  cube_hierarchy_node.csv  cube_link.csv  cube_mapping.csv  cube_relationship.csv  cube_structure.csv  cube_structure_mapping.csv  cube_structure_mapping_item.csv  cube_to_table.csv  facet_collection.csv  facet_enumeration.csv  legal_reference.csv  legal_text.csv  logical_transformation_rule.csv  mapping_to_cube.csv  member.csv  member_hierarchy_node.csv  member_mapping_item.csv  subdomain_enumeration.csv  transformation_scheme.csv  variable_mapping.csv  variable_mapping_item.csv  (+1 more)
birds_nest/tests/: configuration_file_tests.json  test_cell_f_05_01_ref_finrep_3_0_152457_ref__loan_and_guarantee_scenario_1.py  test_cell_f_05_01_ref_finrep_3_0_152589_ref__loan_and_guarantee_scenario_2.py
(+47 files in other folders)
