[project]
name = "birds-nest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.3",
    "notebook>=7.3.2",
    "pyecore>=0.15.1",
    "pytest>=8.3.4",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.7",
    "unidecode>=1.3.8",
]
